--- a/website/better-chess-com/package.json
+++ b/website/better-chess-com/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "chart.js": "^3.9.1",
+    "chess-web-api": "^1.1.2",
     "chess.js": "^0.13.4",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-chessboard": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "stockfish.wasm": "^0.10.0",
