--- a/website/better-chess-com/package.json
+++ b/website/better-chess-com/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "chess-web-api": "^1.1.2",
     "chess.js": "^0.13.4",
     "http-proxy-middleware": "^2.0.6",
@@ -24,6 +25,7 @@
     "react-chessboard": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stockfish-nnue.wasm": "^1.0.0-alpha.2",
     "stockfish.wasm": "^0.10.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
