--- a/website/better-chess-com/package.json
+++ b/website/better-chess-com/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-chessboard": "^1.3.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "stockfish-nnue.wasm": "^1.0.0-alpha.2",
     "stockfish.wasm": "^0.10.0",
