--- a/website/better-chess-com/package.json
+++ b/website/better-chess-com/package.json
@@ -11,14 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.49",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "chess-web-api": "^1.1.2",
-    "chess.js": "^0.13.4",
+    "flag-icons": "^6.6.6",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -56,6 +52,9 @@
     ]
   },
   "devDependencies": {
-    "@types/chess.js": "^0.13.3"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.49",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6"
   }
 }
