format and rename and remove console log

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Chess app by Dekajoo",
+  "name": "Chess app by Dekajoo",
   "icons": [
     {
       "src": "favicon.ico",
