--- a/website/better-chess-com/docker-compose.yml
+++ b/website/better-chess-com/docker-compose.yml
@@ -19,11 +19,11 @@ services:
       - traefik.http.services.nginx_chess.loadBalancer.server.port=80
 
       # Rule
-      - traefik.http.routers.nginx_chess.rule=Host(chess.jehanno.net`)
+      - traefik.http.routers.nginx_chess.rule=Host(`chess.jehanno.net`)
       # SSL configuration
       - traefik.http.routers.nginx_chess.entryPoints=websecure
       - traefik.http.routers.nginx_chess.tls=true
-      - traefik.http.routers.nginx_chess.tls.certResolver=le
+      - traefik.http.routers.nginx_chess.tls.certResolver=myresolver
 
 networks:
   web:
