--- a/website/better-chess-com/nginx.conf
+++ b/website/better-chess-com/nginx.conf
@@ -28,16 +28,25 @@ http {
         location / {
             root   html;
             try_files $uri $uri/ $uri.html /index.html;
+
+            add_header 'Cross-Origin-Embedder-Policy' 'require-corp';
+            add_header 'Cross-Origin-Opener-Policy' 'same-origin';
         }
 
         location ~* \.(?:css|js|jpg|svg)$ {
             expires 30d;
             add_header Cache-Control "public";
+        
+            add_header 'Cross-Origin-Embedder-Policy' 'require-corp';
+            add_header 'Cross-Origin-Opener-Policy' 'same-origin';
         }
 
         location ~* \.(?:json)$ {
             expires 1d;
             add_header Cache-Control "public";
+        
+            add_header 'Cross-Origin-Embedder-Policy' 'require-corp';
+            add_header 'Cross-Origin-Opener-Policy' 'same-origin';
         }
     }
 
